feat(0.0.2): 1.优化向量数据库问题